fixed mobile overflow issue

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,10 +1,6 @@
 .home-container {
     background-color: $background;
 
-    .container {
-        padding: 0;
-    }
-
     h1 {
         font-size: $h1;
         color: $brown;
